--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -6,7 +6,7 @@ layout: default
   <header>
     <div class="about">
       <div class="cover-author-image">
-        <a href="{{site.baseurl}}/"><img src="{{site.baseurl}}/assets/images/banner_moneybay_1200x750.png" alt="MoneyBay"></a>
+        <a href="/"><img src="/assets/images/banner_moneybay_1200x750.png" alt="MoneyBay"></a>
       </div>
       <div class="author-name">MoneyBay</div>
       <p>Ứng dụng quản lý chi tiêu cá nhân thông minh</p>
