--- a/_includes/pagination.html
+++ b/_includes/pagination.html
@@ -3,9 +3,9 @@
     <ul>
       {% if paginator.previous_page %}
         {% if paginator.previous_page == 1 %}
-        <p><a class="newer-posts" href="{{ site.baseurl }}/blog/"><i class="fa fa-long-arrow-left" aria-hidden="true"></i></a></p>
+        <p><a class="newer-posts" href="/blog/"><i class="fa fa-long-arrow-left" aria-hidden="true"></i></a></p>
         {% else %}
-        <p><a class="newer-posts" href="{{ site.baseurl }}/blog/page/{{ paginator.previous_page }}/"><i class="fa fa-long-arrow-left" aria-hidden="true"></i></a></p>
+        <p><a class="newer-posts" href="/blog/page/{{ paginator.previous_page }}/"><i class="fa fa-long-arrow-left" aria-hidden="true"></i></a></p>
         {% endif %}
       {% endif %}
 
@@ -14,7 +14,7 @@
       {% endif %}
       
       {% if paginator.next_page %}
-      <p><a class="older-posts" href="{{ site.baseurl }}/blog/page/{{ paginator.next_page }}/"><i class="fa fa-long-arrow-right" aria-hidden="true"></i></a></p>
+      <p><a class="older-posts" href="/blog/page/{{ paginator.next_page }}/"><i class="fa fa-long-arrow-right" aria-hidden="true"></i></a></p>
       {% endif %}
     </ul>
   </nav>
